--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thiago Domingos</title>
+    <title>Pedro Damasceno</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -29,7 +29,7 @@
             <div class="center">
                 <img src="eu.jpg"></img>
             </div>
-            <h1>Thiago Domingos</h1>
+            <h1>Pedro Damasceno</h1>
             <h2>Analistas de Sistemas</h2>
         </header>
 
@@ -37,12 +37,8 @@
             <section>
                 <h3>Sobre mim</h3>
                 <p>
-                    Meu nome é Thiago tenho 19 anos de idade moro na zona leste e sou apaixonado no timão
-                    atualmente estou cursando análise e desenvolvimento de sistemas curso no qual sou apaixonado em fazer
-                    Estou buscando fazer cursos profissionalizantes para me aperfeiçoar na area, ainda não tenh projetos
-                    completamente concluidos, porém logo mais estarei com eles prontos, irei me formar logo logo e busco 
-                    entrar na area para seguir carreira, super indico estudar esta area devido os aprendizados
-                    e no que o futuro apresenta seguir e evoluir dentro de alguns anos, basicamento buscar um aprendizado.
+                    Meu nome é Pedro damasceno tenho 21 anos e estudo ADS na cruzeiro do sul junto com minha turma 3H,
+                    e estou gostando muito do meu curso e pretendo dar mais seguimento para esta area 
                     
 
                 </p>
@@ -50,28 +46,25 @@
             <section>
                 <h3>Formação</h3>
                 <p>
-                    Referente as minhas formações, sou novo e ainda tenho muito o que aprender e evoluir,
-                    busco estar me aperfeiçoando como disse acima dentro da area especifica que seria em analise e desenvolvimento de sistemas.
-                    E também lógico buscar uma area especifica na qual vou me profissionalizar. 
-                    Analise e desenvolvimento de sistemas / 2022 - Cursando 
-                </p>
-            </section>
+                    Sobre minha formação ainda não tenho muito em meuy curriculo ma sja tenho experiencia na minha area pois ja fiz estagio
+                    e ja trabaçhei registrado na area, porem sempre tem mais para aprender tambem possuo ingles avançado e me formando no
+                    deste ano
             <section>
                 <h3>Cursos</h3>
                 <p>
-                    Tenho cursos básicos em CSS e C# - (CSS) 2022 / 2023 E (C#)  2023 - Cursando
+                    Tenho cursos básicos em Oracle e SQL
                 </p>
             </section>
         </main>
 
         <footer>
-            <a href="https://github.com/ThiagoTigas" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/PedroDamas19" target="_blank" rel="noopener noreferrer">
                 <img src="Github.png"></img>
                 <p>Github</p>
-                <a href="https://www.instagram.com/thiiago_amaral._/?next=%2F" target="_blank" rel="noopener noreferrer">
+                <a href="https://instagram.com/ow_damas?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer">
                 <img src="instagram.jpg"></img>
                 <p>Instagram</p>
-                <a href="https://www.linkedin.com/in/thiago-domingos-b13002221/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/pedro-damasceno-aa3030248" target="_blank" rel="noopener noreferrer">
                     <img src="linkedin.jpg"></img>
                     <p>linkedin</p>
             </a>
