--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thiago Domingos</title>
+    <title>Pedro Damasceno</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -40,13 +40,13 @@
         </main>
 
         <footer>
-            <a href="https://github.com/ThiagoTigas" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/PedroDamas19" target="_blank" rel="noopener noreferrer">
                 <img src="Github.png"></img>
                 <p>Github</p>
-                <a href="https://www.instagram.com/thiiago_amaral._/?next=%2F" target="_blank" rel="noopener noreferrer">
+                <a href="https://instagram.com/ow_damas?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer">
                 <img src="instagram.jpg"></img>
                 <p>Instagram</p>
-                <a href="https://www.linkedin.com/in/thiago-domingos-b13002221/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/pedro-damasceno-aa3030248" target="_blank" rel="noopener noreferrer">
                     <img src="linkedin.jpg"></img>
                     <p>linkedin</p>
             </a>
